--- a/PEMMDASQUIZZER/PEMMDASQUIZZER.vcxproj.filters
+++ b/PEMMDASQUIZZER/PEMMDASQUIZZER.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Calculate.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="System.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PEMMDAS.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Calculate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="System.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
